# quant-research

./: .gitignore  LICENSE  docker-compose.yml  main.py  pyproject.toml  run_collector.py  run_ingestor.py
dashboards/: crypto_dashboard.json
src/collector/: backfill.py  binance_stream.py  kafka_producer.py
src/config/: settings.yaml
src/ingestor/: database_handler.py
src/utils/: config_loader.py
